Enable initial sync for Docker Compose
This is a experimental feature, now this makes Docker Compose useful and the preferred option.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,4 +20,5 @@ services:
         - path: C:/Users/rtxa/Documents/GitHub/hldm-docker/gamedir/agmodx
           target: /home/hlds_user/hlds/valve
           action: sync
+          x-initialSync: true
     
